Split topK into topK, quickTopK, and quickTopKSimd for comparison, added benchmarks